# fularuha

./: .gitignore  README.md  fularuha.sh
assembler/: Cargo.toml
assembler/examples/: labels.flbc  simple.flbc
assembler/src/: asm.rs  assembler.rs  main.rs  parser.rs
bytecode/: Cargo.toml
bytecode/src/: defs.rs  lib.rs
compiler/: fularuha_compiler.cabal
compiler/examples/: choice.flrh  factorial.flrh  factorial_iter.flrh  factorial_seq.flrh  function.flrh  hof.flrh  if.flrh  if_false.flrh  list.flrh  mul.flrh  plus_2_2.flrh  print_5.flrh  testcase.flrh  types.flrh
compiler/src/: AST.hs  Annotate.hs  Assembly.hs  Builtins.hs  Compile.hs  Inference.hs  Main.hs  Parser.hs  SymbolTable.hs  TypedAST.hs  TypedSymbolTable.hs
runtime/: Cargo.toml
runtime/src/: bytecode.rs  debug_log.rs  eval_context.rs  evaluator.rs  main.rs  tests.rs
